--- a/hydraulic.v2.8.4
+++ b/hydraulic.v2.8.4
@@ -11,7 +11,7 @@
       "source": [
         "#@title { form-width: \"2%\" }\n",
         "#@markdown\n",
-        "# chk 00 \n",
+        "# chk 00\n",
         "\n",
         "dev = False\n",
         "\n",
@@ -59,7 +59,6 @@
         "SIMULATECLICK_DESC = 'C' + nowstr()\n",
         "\n",
         "# Log\n",
-        "\n",
         "LOG_FILENAME = f\"td-log-{nowstr()}\"\n",
         "LOG_DIR_LOCAL = '/content/tdlogs' if ENV_OS == 'Linux' else \"c:/td/logs\"\n",
         "LOG_FILE = f\"{LOG_DIR_LOCAL}/{LOG_FILENAME}.txt\"\n",
@@ -77,7 +76,6 @@
         "                data = file.read(100)\n",
         "                if len(data) > 0:\n",
         "                    file.write(\"\\n\")\n",
-        "\n",
         "                if lines:\n",
         "                    for ln in lines:\n",
         "                        file.write(ln + \"\\n\")\n",
@@ -150,7 +148,7 @@
         "        if src == '<module>':\n",
         "            src = MAIN\n",
         "\n",
-        "        if lines:\n",
+        "        if lines: \n",
         "            for line in lines:\n",
         "                self.queue(line, ERROR_LOG, src)\n",
         "        if text:\n",
@@ -185,7 +183,7 @@
         "            !rsync -I \"$log_file\" \"$log_drv_file\"\n",
         "\n",
         "logger = Logger.getInstance()   \n",
-        "info = logger.info\n",
+        "info = logger.info \n",
         "error = logger.error\n",
         "warning = logger.warning\n",
         "release = logger.release\n",
@@ -307,7 +305,7 @@
         "\n",
         "        if config.tv_path:\n",
         "            info(f\"TV saving path: {config.tv_path}\")\n",
-        "        else:\n",
+        "        else: \n",
         "            error(f\"TV saving path isn't set\")\n",
         "            config.tv_path = f\"{config.localdownloadbase}/TV Shows\"\n",
         "\n",
@@ -333,7 +331,7 @@
         "    info(f\"Checking uncomplete downloads sources in: {config.general_path}/.uncomplete\")\n",
         "    p0 = config.general_path + \"/\" + \".uncomplete\"\n",
         "    if os.path.exists(p0):\n",
-        "        if is_empty(p0):\n",
+        "        if is_empty(p0): \n",
         "            !rm -r \"$p0\"\n",
         "        else:\n",
         "            info(f\"Adding uncomplete downloads sources: {p0}\")\n",
@@ -1329,17 +1327,17 @@
         "    watched = False\n",
         "\n",
         "class DownloadResult:\n",
-        "    def __init__(this, resulturl, size = 0, date = \"\", seeders = \"\", leechers = \"\", uploader = \"\", href = \"\", downloaded= False, watched= False, attrs= None):\n",
-        "        this.resulturl = resulturl\n",
-        "        this.size = size\n",
-        "        this.date = date \n",
-        "        this.seeders = seeders\n",
-        "        this.leechers = leechers\n",
-        "        this.uploader = uploader\n",
-        "        this.href = href\n",
-        "        this.downloaded = downloaded\n",
-        "        this.watched = watched\n",
-        "        this.attrs = attrs\n",
+        "    def __init__(self, resulturl= \"\", size = 0, date = \"\", seeders = \"\", leechers = \"\", uploader = \"\", href = \"\", downloaded= False, watched= False, attrs= None):\n",
+        "        self.resulturl = resulturl\n",
+        "        self.size = size\n",
+        "        self.date = date \n",
+        "        self.seeders = seeders\n",
+        "        self.leechers = leechers\n",
+        "        self.uploader = uploader\n",
+        "        self.href = href\n",
+        "        self.downloaded = downloaded\n",
+        "        self.watched = watched\n",
+        "        self.attrs = attrs\n",
         "\n",
         "    resulturl: str\n",
         "    size = 0\n",
@@ -1371,10 +1369,26 @@
         "wordwrap_css = \"white-space: pre-wrap;\"\n",
         "\n",
         "class WebResult:\n",
-        "    def __init__(self) -> None: \n",
+        "    def __init__(self, search=\"\", category= None, results= None, attrs= None, sort= None, order= None, url= None, resultcount= 0, page= None,\n",
+        "                 pageresultcount= 0, totalpages= 0, nextpage= -1, previouspage= -1) -> None: \n",
+        "        self.search = search\n",
+        "        self.category = category\n",
+        "        self.results = results\n",
+        "        self.attrs = attrs\n",
+        "        self.sort = sort\n",
+        "        self.order = order\n",
+        "        self.url = url\n",
+        "        self.resultcount = resultcount\n",
+        "        self.page = page\n",
+        "        self.pageresultcount = pageresultcount\n",
+        "        self.totalpages = totalpages\n",
+        "        self.nextpage = nextpage\n",
+        "        self.previouspage = previouspage\n",
         "        self.resultpages = dict()\n",
-        "    attrs = None\n",
+        "        \n",
+        "    attrs: DownloadAttrs \n",
         "    sort = None\n",
+        "    order = DESCORDER\n",
         "    results: list[DownloadResult|IMDBTitle] = None\n",
         "    url = None\n",
         "    currentpageurl = None\n",
@@ -1385,21 +1399,23 @@
         "    attrs: DownloadAttrs = None    \n",
         "    search = \"\"\n",
         "    category = None\n",
-        "    search: str\n",
-        "    nextpage = -1\n",
-        "    previouspage = -1\n",
         "    resultcount = 0\n",
         "    totalpages = 0\n",
         "    page = 0\n",
+        "    nextpage = -1\n",
+        "    previouspage = -1\n",
         "    pageresultcount = 0\n",
         "    table: pn.widgets.Tabulator = None\n",
         "    tableoutput: Output = None\n",
-        "    pagination_handler = None\n",
         "    pagination_container: HBox = None\n",
         "    resultscount = 0\n",
         "    site = ''\n",
         "    tab = None\n",
         "    resultpages = None\n",
+        "\n",
+        "    def pagination_handler(self, btn): \n",
+        "        page = int(btn.description)\n",
+        "        updatesearchresults(self, page= page)\n",
         "\n",
         "    def actionhandler(self, e):\n",
         "        pass\n",
@@ -1419,26 +1435,34 @@
         "    def getresultcontrols(self):\n",
         "        pass\n",
         "\n",
+        "    def updateresults(self, page, sort= None, order= None):\n",
+        "        pass\n",
+        "\n",
         "class IMDBResult(WebResult): #obj values used in class attribute definitions should be defined before, in function/methods it shouldn't.\n",
-        "    def __init__(self) -> None:\n",
-        "        super().__init__()\n",
+        "    def __init__(self, imdbparams= None, search=\"\", category= None, results= None, attrs= None, sort= \"\", order= None, url= \"\", resultcount= 0,\n",
+        "                 page= None, pageresultcount= 0, totalpages= 0, nextpage= -1, previouspage= -1) -> None:\n",
+        "        super().__init__(search, category, results, attrs, sort, order, url, resultcount, page, pageresultcount, totalpages, nextpage, previouspage)\n",
+        "        self.imdbparams = imdbparams\n",
         "        self.tab = nav[IMDB_TAB]\n",
         "        self.site = IMDB\n",
         "        self.downloadedtitlespages = dict()\n",
         "        self.watchedtitlespages = dict()\n",
+        "\n",
         "    results: list[IMDBTitle] = None\n",
-        "    params: IMDBParams \n",
+        "    imdbparams: IMDBParams \n",
         "    downloadedcount = 0\n",
         "    watchedcount = 0\n",
         "    downloadedtitles: list[IMDBTitle] = None\n",
         "    watchedtitles: list[IMDBTitle] = None\n",
+        "    sort = IMDB_DATE_SORT\n",
+        "    order = ASCORDER\n",
         "\n",
         "    def actionhandler(self, e):\n",
-        "        params = self.params\n",
+        "        params = self.imdbparams\n",
         "        if e.column == ' ':\n",
         "            result: IMDBTitle = self.results[e.row]\n",
         "            info(f'Searching download {result.title_link} from IMDB search.')\n",
-        "            search = f\"{result.title_text} {self.params.siteparameters}\"\n",
+        "            search = f\"{result.title_text} {self.imdbparams.siteparameters}\"\n",
         "            switchview(nav[SEARCH_TAB], getloadingview( f'Search for {types[self.attrs.type_]} \"{result.title_link}\" site: {params.sites[0]} page: 1.'), temp= True)\n",
         "            maintabs.selected_index = appstate.tab_indices[SEARCH_TAB]\n",
         "            search_process(site= params.sites[0], search= search, attrs= self.attrs, category= params.sitecategory, sort= SEEDERSSORT, order= DESCORDER, page= 1, source= IMDB_TAB)\n",
@@ -1471,7 +1495,7 @@
         "                                                formatters= imdbresultstableformatters,\n",
         "                                                sorters= imdbresultstablesorters,\n",
         "                                                selectable='checkbox', \n",
-        "                                                theme= 'bootstrap4', #semantic-ui\n",
+        "                                                theme= 'bootstrap4', #or: semantic-ui\n",
         "                                                configuration= {\n",
         "                                                'rowHeight': 60,\n",
         "                                                'columnDefaults': {'headerSort': False,}})\n",
@@ -1485,25 +1509,52 @@
         "\n",
         "    def getresultcontrols(self):\n",
         "        sort_dropdown = Dropdown(description= \"Sort\", value= self.sort ,options= [(\"By User Rating\", IMDB_RATING_SORT), (\"By Date\", IMDB_DATE_SORT), (\"Alphabetically\", IMDB_ALPHABETICAL_SORT)], layout= {}, style= {})\n",
-        "        return (sort_dropdown,)\n",
+        "        order_dropdown = Dropdown(description= \"Order\", value= self.order, options = [('Ascending', ASCORDER), ('Descending', DESCORDER)], layout= {}, style= {})\n",
+        "        sort_btn = Button(description= \"Sort\", layout= {\"width\": \"80px\", \"margin\": \"0 50px 0 0\"})\n",
+        "        sort_btn.on_click(lambda btn: updatesearchresults(self, 1, sort= sort_dropdown.value, order= order_dropdown.value))\n",
+        "        download_btn = Button(description= \"Download Selected\", layout= {\"width\": \"150px\"})\n",
+        "        download_btn.on_click(self.handlebulkdownload)\n",
+        "        return (sort_dropdown, order_dropdown, sort_btn, download_btn)\n",
+        "    \n",
+        "    def handlebulkdownload(self, btn):\n",
+        "        selectedrows = self.table.selection\n",
+        "        # set bulk download list in appstate\n",
+        "        # call bulk download handle func\n",
+        "        # handler pops next downloaditem, displays site decision view (temp) with handler\n",
+        "        # on input handler searches in the site\n",
+        "        # on download, adds donwloadload, pops next download item and shows site decesion view ()\n",
+        "\n",
+        "        #display site\n",
+        "\n",
+        "    def updateresults(self, page, sort= None, order= None):\n",
+        "        if not sort:\n",
+        "            sort= self.imdbparams.imdbsort\n",
+        "        if not order:\n",
+        "            order= self.imdbparams.imdborder\n",
+        "        pagekey = f\"{page}|{sort}|{order}\" \n",
+        "        if pagekey in self.resultpages:\n",
+        "            self.results = self.resultpages[pagekey]\n",
+        "            self.downloadedtitles = self.downloadedtitlespages[page]\n",
+        "            self.watchedtitles = self.watchedtitlespages[page]\n",
+        "            self.page = page\n",
+        "            self.pageresultcount = len(self.results)\n",
+        "            self.previouspage = page - 1\n",
+        "            self.nextpage = page + 1 if page + 1 <= self.totalpages else 0\n",
+        "        else:\n",
+        "            self.imdbparams.imdbsort = sort\n",
+        "            self.imdbparams.imdborder = order\n",
+        "            searchIMDB(self.imdbparams, page= page, result= self)\n",
         "\n",
         "class SearchResult(WebResult):\n",
-        "    def __init__(self, search= \"\", site= X1337X, category= ALLCATEGORIES_TD, attrs= None , results = None, resultcount= 0, totalpages= 0, page= 0, nextpage= -1, previouspage= -1, sort= None) -> None:\n",
-        "        super().__init__()\n",
-        "        self.search = search\n",
-        "        self.category = category\n",
+        "    def __init__(self, site= X1337X, search=\"\", category= ALLCATEGORIES_TD, results= None, attrs= None, sort= \"\", order= None, url= \"\",\n",
+        "                 resultcount= 0, page= None, pageresultcount= 0, totalpages= 0, nextpage= -1, previouspage= -1) -> None:\n",
+        "        super().__init__(search, category, results, attrs, sort, order, url, resultcount, page, pageresultcount,\n",
+        "                         totalpages, nextpage, previouspage)\n",
         "        self.site = site\n",
-        "        self.attrs = attrs\n",
-        "        self.resultcount = resultcount\n",
-        "        self.totalpages = totalpages\n",
-        "        self.page = page\n",
-        "        self.nextpage = nextpage\n",
-        "        self.previouspage = previouspage\n",
-        "        self.sort = sort\n",
-        "        self.results = results\n",
         "        self.sorters = []\n",
         "        self.tab = nav[SEARCH_TAB]\n",
         "\n",
+        "    sort = SEEDERSSORT\n",
         "    def actionhandler(self, e):\n",
         "        if e.column == ' ':\n",
         "            res: DownloadResult = self.results[e.row]\n",
@@ -1547,7 +1598,25 @@
         "\n",
         "    def getresultcontrols(self):\n",
         "        sort_dropdown =  Dropdown(description= \"Sort\", value= self.sort, options = [('By Seeders', SEEDERSSORT), ('By Time', TIMESORT), ('By Size', SIZESORT)], layout= {}, style= {})\n",
-        "        return (sort_dropdown,)\n",
+        "        order_dropdown = Dropdown(description= \"Order\", value= self.order, options = [('Ascending', ASCORDER), ('Descending', DESCORDER)], layout= {}, style= {})\n",
+        "        sort_btn = Button(description= \"Sort\", layout= {\"width\": \"80px\", \"margin\": \"0 50px 0 0\"})\n",
+        "        sort_btn.on_click(lambda btn: updatesearchresults(self, 1, sort= sort_dropdown.value, order= order_dropdown.value))\n",
+        "        return (sort_dropdown, order_dropdown, sort_btn)\n",
+        "    \n",
+        "    def updateresults(self, page, sort= None, order= None):\n",
+        "        if not sort:\n",
+        "            sort = self.sort\n",
+        "        if not order:\n",
+        "            order = self.order\n",
+        "        pagekey = f\"{page}|{sort}|{order}\"\n",
+        "        if pagekey in self.resultpages:\n",
+        "            self.results = self.resultpages[pagekey]\n",
+        "            self.pageresultcount = len(self.results)\n",
+        "            self.page = page\n",
+        "            self.previouspage = page - 1\n",
+        "            self.nextpage = page + 1 if page + 1 <= self.totalpages else 0\n",
+        "        else:\n",
+        "            search1337x(self.search, sort= sort, order= order, category= self.category, page= page, attrs= self.attrs, result= self)\n",
         "\n",
         "#### API / Download library management\n",
         "\n",
@@ -2351,63 +2420,49 @@
         "        title = title.replace('<a href=\"', f'<a {linkhtmlstr} href=\"{base}') \n",
         "        return title\n",
         "    return ''\n",
-        "\n",
-        "def updateIMDBresult(result: IMDBResult, page):\n",
-        "    if page in result.resultpages:\n",
-        "        result.results = result.resultpages[page]\n",
-        "        result.downloadedtitles = result.downloadedtitlespages[page]\n",
-        "        result.watchedtitles = result.watchedtitlespages[page]\n",
-        "        result.page = page\n",
-        "        result.pageresultcount = len(result.results)\n",
-        "        result.previouspage = page - 1\n",
-        "        result.nextpage = page + 1 if page + 1 <= result.totalpages else 0\n",
-        "    else:\n",
-        "        searchIMDB(result.params, page, result= result)\n",
         "    \n",
-        "def searchIMDB(params: IMDBParams, page= 1, perpage= 40, result: IMDBResult= None):\n",
+        "def searchIMDB(imdbparams: IMDBParams, page= 1, perpage= 40, result: IMDBResult= None):\n",
         "    if page < 1: page = 1\n",
         "    imdbgroupsandlabels = \"\"\n",
-        "    if params.top250:\n",
+        "    if imdbparams.top250:\n",
         "        imdbgroupsandlabels = imdbgroupsandlabels + IMDB_TOP_250 + \",\"\n",
-        "    if params.top1000:\n",
+        "    if imdbparams.top1000:\n",
         "        imdbgroupsandlabels = imdbgroupsandlabels + IMDB_TOP_1000 + \",\"\n",
-        "    if params.oscarwinner:\n",
+        "    if imdbparams.oscarwinner:\n",
         "        imdbgroupsandlabels = imdbgroupsandlabels + IMDB_OSCAR_WINNER + \",\"\n",
-        "    if params.bestpicturewinner:\n",
+        "    if imdbparams.bestpicturewinner:\n",
         "        imdbgroupsandlabels = imdbgroupsandlabels + IMDB_BEST_PICTURE_WINNER + \",\"\n",
-        "    if params.bestdirectorwinner: \n",
+        "    if imdbparams.bestdirectorwinner: \n",
         "        imdbgroupsandlabels = imdbgroupsandlabels + IMDB_BEST_DIRECTOR_WINNER \n",
         "\n",
         "    lists = ''\n",
-        "    if params.inlists: lists = params.inlists\n",
-        "    if params.notinlists:\n",
-        "        lists = (lists + \",\" if lists else lists) + IMDB_EXCULDE_MARK + params.notinlists.replace(',', ',' + IMDB_EXCULDE_MARK) \n",
-        "    if params.englishonly: \n",
+        "    if imdbparams.inlists: lists = imdbparams.inlists\n",
+        "    if imdbparams.notinlists:\n",
+        "        lists = (lists + \",\" if lists else lists) + IMDB_EXCULDE_MARK + imdbparams.notinlists.replace(',', ',' + IMDB_EXCULDE_MARK) \n",
+        "    if imdbparams.englishonly: \n",
         "        lists = (lists + \",\" if lists else lists) + IMDB_EXCULDE_MARK + config.international_titles_list + \",\" + IMDB_EXCULDE_MARK \\\n",
         "            + config.indian_titles_list + \",\" + IMDB_EXCULDE_MARK + config.animation_titles_list + \"&languages=en\"\n",
         "    else:\n",
-        "        if params.internationaltitles: \n",
+        "        if imdbparams.internationaltitles: \n",
         "            lists = (lists + \",\" if lists else lists) + config.international_titles_list \n",
-        "        if params.indiantitles: \n",
+        "        if imdbparams.indiantitles: \n",
         "            lists = (lists + \",\" if lists else lists) + config.indian_titles_list\n",
-        "        if params.animationtitles: \n",
+        "        if imdbparams.animationtitles: \n",
         "            lists = (lists + \",\" if lists else lists) + config.animation_titles_list \n",
         "    \n",
-        "    sortandorder = params.imdbsort\n",
-        "    if params.imdborder == ASCORDER:   sortandorder = sortandorder + \",asc\"\n",
+        "    sortandorder = imdbparams.imdbsort\n",
+        "    if imdbparams.imdborder == ASCORDER:   sortandorder = sortandorder + \",asc\"\n",
         "    else:   sortandorder = sortandorder + \",desc\" \n",
-        "    releasedates = f\"&release_date={params.startdate},{params.enddate}\" if params.startdate or params.enddate else ''\n",
-        "    ratings = f\"&user_rating={params.minrating if params.minrating else ''},{params.maxrating if params.maxrating else ''}\" if params.minrating or params.maxrating else ''\n",
-        "    votes = f\"&num_votes={params.minvotes if params.minvotes else ''},{params.maxvotes if params.maxvotes else ''}\" if params.minvotes or params.maxvotes else ''\n",
-        "    runtime = f\"&runtime={params.minruntime if params.minruntime else ''},{params.maxruntime if params.maxruntime else ''}\" if params.minruntime or params.maxruntime else ''\n",
+        "    releasedates = f\"&release_date={imdbparams.startdate},{imdbparams.enddate}\" if imdbparams.startdate or imdbparams.enddate else ''\n",
+        "    ratings = f\"&user_rating={imdbparams.minrating if imdbparams.minrating else ''},{imdbparams.maxrating if imdbparams.maxrating else ''}\" if imdbparams.minrating or imdbparams.maxrating else ''\n",
+        "    votes = f\"&num_votes={imdbparams.minvotes if imdbparams.minvotes else ''},{imdbparams.maxvotes if imdbparams.maxvotes else ''}\" if imdbparams.minvotes or imdbparams.maxvotes else ''\n",
+        "    runtime = f\"&runtime={imdbparams.minruntime if imdbparams.minruntime else ''},{imdbparams.maxruntime if imdbparams.maxruntime else ''}\" if imdbparams.minruntime or imdbparams.maxruntime else ''\n",
         "    userwatched = '' # \"&my_ratings=exclude\" if params.filterwatched else ''\n",
         "    pagestr= f\"start={1+((page-1)*perpage)}\"\n",
-        "    url = f'{IMDB_BASE}/search/title/?title={params.keyword}&title_type={params.titletype}{releasedates}{ratings}{votes}{runtime}{userwatched}&lists={lists}&groups={imdbgroupsandlabels}&sort={sortandorder}&view=advanced&count={perpage}&{pagestr}'\n",
+        "    url = f'{IMDB_BASE}/search/title/?title={imdbparams.keyword}&title_type={imdbparams.titletype}{releasedates}{ratings}{votes}{runtime}{userwatched}&lists={lists}&groups={imdbgroupsandlabels}&sort={sortandorder}&view=advanced&count={perpage}&{pagestr}'\n",
         "    if not result:\n",
-        "        result = IMDBResult()\n",
-        "        result.params = params\n",
-        "        result.attrs = params.attrs\n",
-        "        result.url = url\n",
+        "        result = IMDBResult(search= imdbparams.keyword, imdbparams= imdbparams, url= url, sort=imdbparams.imdbsort,\n",
+        "                            order= imdbparams.imdborder, attrs= imdbparams.attrs)\n",
         "        appstate.searchresults.append(result)\n",
         "    req = requests.get(url, headers = {\"Accept-Language\": \"en-US\"})\n",
         "    result.currentpageurl = url\n",
@@ -2463,7 +2518,7 @@
         "                if movie_exists(title_text):\n",
         "                    downloaded.append(title)\n",
         "                    title.downloaded= True\n",
-        "                    if not params.filterdownloaded:\n",
+        "                    if not imdbparams.filterdownloaded:\n",
         "                        titles.append(title) \n",
         "                else:\n",
         "                    titles.append(title)\n",
@@ -2472,7 +2527,8 @@
         "                error(ex())\n",
         "                continue       \n",
         "        result.results = titles\n",
-        "        result.resultpages[page] = titles\n",
+        "        pagekey = f\"{page}|{imdbparams.imdbsort}|{imdbparams.imdborder}\"\n",
+        "        result.resultpages[pagekey] = titles\n",
         "        result.watchedtitles = watched\n",
         "        result.watchedtitlespages[page] = watched\n",
         "        result.downloadedtitles = downloaded\n",
@@ -2723,26 +2779,17 @@
         "        if category == GAMESCATEGORY_TD:\n",
         "            return X1337X_GAMES  \n",
         "    return ALLCATEGORIES_TD\n",
-        "\n",
-        "def update1337xresult(result: SearchResult, page):\n",
-        "    if page in result.resultpages:\n",
-        "        result.results = result.resultpages[page]\n",
-        "        result.pageresultcount = len(result.results)\n",
-        "        result.page = page\n",
-        "        result.previouspage = page - 1\n",
-        "        result.nextpage = page + 1 if page + 1 <= result.totalpages else 0\n",
-        "    else:\n",
-        "        search1337x(result.search, sort= result.sort, category= result.category, page= page, attrs= result.attrs, result= result)\n",
         "        \n",
-        "def search1337x(search, sort = X1337X_SEEDERS, category = \"\", page = 1, attrs = None, result: SearchResult= None):\n",
+        "def search1337x(search, sort= SEEDERSSORT, order= DESCORDER, category = \"\", page = 1, attrs = None, result: SearchResult= None):\n",
         "    if page < 1: page = 1\n",
         "    if not attrs:\n",
         "        attrs = DownloadAttrs()\n",
         "    if not result:    \n",
         "        result = SearchResult(search= search, site= X1337X, category= ALLCATEGORIES_TD, attrs= attrs)\n",
         "        appstate.searchresults.append(result)\n",
+        "    l337xsort = getsitesort(sort, order, X1337X)\n",
         "    search_s = search.replace(\"'\", \" \").replace(\" \",\"%20\")\n",
-        "    parameters = f\"/sort-category-search/{search_s}/{category}/{sort}/{page}/\" if category else f\"/sort-search/{search_s}/{sort}/{page}/\"\n",
+        "    parameters = f\"/sort-category-search/{search_s}/{category}/{l337xsort}/{page}/\" if category else f\"/sort-search/{search_s}/{l337xsort}/{page}/\"\n",
         "    url = X1337XPROXEY_BASE + parameters\n",
         "    info(f\"Scraping 1337x search for: {search} Page: {page}\\nURL: {url}.\")\n",
         "    download_state = \"downloaded\" if check_download(attrs.type_, search) else \"not downloaded\"\n",
@@ -2764,13 +2811,12 @@
         "                totalpages = page\n",
         "            previouspage = page - 1\n",
         "            nextpage = page + 1 if page + 1 <= totalpages else 0\n",
-        "\n",
         "        result.page = page\n",
         "        result.previouspage = previouspage\n",
         "        result.nextpage = nextpage\n",
         "        result.totalpages = totalpages\n",
         "        result.sort = sort\n",
-        "\n",
+        "        result.order = order\n",
         "        main_element = soup.find(\"tbody\")\n",
         "        if main_element is None:\n",
         "            warning(\"\\nResults table is null search.\\n\")\n",
@@ -2797,7 +2843,7 @@
         "                    results.append(res)\n",
         "                result.resultcount = len(results)\n",
         "                result.results = results\n",
-        "                result.resultpages[page] = results\n",
+        "                result.resultpages[f\"{page}|{sort}|{order}\"] = results\n",
         "            else:\n",
         "                info(f\"No results found for {search}.\")\n",
         "                result.status = FAIL\n",
@@ -3634,7 +3680,7 @@
         "        return -2\n",
         "    elif select == \"1\":\n",
         "        attrs.site_source = X1337X\n",
-        "        search_process((X1337X, True), search = lookup,  attrs= attrs)\n",
+        "        search_process(X1337X, search= lookup,  attrs= attrs)\n",
         "    return 0\n",
         "\n",
         "def pause_resume_session(b= None):\n",
@@ -3973,10 +4019,9 @@
         "\n",
         "def search_process(site, search, attrs, category= '', sort= SEEDERSSORT, order= DESCORDER, page= 1, source= SEARCH_TAB):\n",
         "    info(f\"Searching for {search} in sites {', '.join(site)}\")\n",
-        "    l337xsort = getsitesort(sort, order, site)\n",
         "    category = getsitecategory(category, site)\n",
         "    if site == X1337X:\n",
-        "        result = search1337x(search, sort= l337xsort, category= category, page= page, attrs= attrs)\n",
+        "        result = search1337x(search, sort= sort, order= order, category= category, page= page, attrs= attrs)\n",
         "    if result:\n",
         "        searchresultview = getsearchresultview(result)\n",
         "        viewstatus = False if source == SEARCH_TAB else True\n",
@@ -4064,7 +4109,7 @@
         "    if search:\n",
         "        search_process(site= site, search= search, attrs= attrs, category= category, sort= sort, order= order)\n",
         "\n",
-        "def imdb_handler(obj):   \n",
+        "def imdb_handler(btn):   \n",
         "    switchview(nav[IMDB_TAB], getloadingview(f'Processing IMDB advanced search page: 1.'), temp= True)\n",
         "    type_ = imdbtype_dropdown.value \n",
         "    keyword = imdbkeyword_text.value \n",
@@ -4565,29 +4610,39 @@
         "\n",
         "searchsearch_text = Text(description= \"Search\", value= \"\", layout= t2controls_layout, style= t2controls_style)\n",
         "searchsearch_hbox = HBox((searchsearch_text,),layout= t_formrow_layout)\n",
+        "\n",
         "searchtype_dropdown = Dropdown(description= \"Download Type\", value= MOVIE ,options= [('General', GENERAL), ('Movie', MOVIE), ('Episode', EPISODE), ('Season', SEASON), ('TV Show', SHOW), ('Music Album', ALBUM), ('Song', TRACK)], layout= t2controls_layout, style= t2controls_style)\n",
         "searchtype_hbox = HBox((searchtype_dropdown,), layout= t_formrow_layout)\n",
+        "\n",
         "searchsite_dropdown = Dropdown(description= \"Site\", value= X1337X, options = [('1337x', X1337X)], layout= t2controls_layout, style= t2controls_style)\n",
         "searchsite_hbox = HBox((searchsite_dropdown,),layout= t_formrow_layout)\n",
+        "\n",
         "searchcategory_dropdown = Dropdown(description= \"Search Category\", value= ALLCATEGORIES_TD, options = [('All', ALLCATEGORIES_TD), ('Movies', MOVIESCATEGORY_TD), ('TV', TVCATEGORY_TD), ('Apps', APPSCATEGORY_TD), ('Games', GAMESCATEGORY_TD)], layout= t2controls_layout, style= t2controls_style)\n",
         "searchcategory_hbox = HBox((searchcategory_dropdown,),layout= t_formrow_layout)\n",
+        "\n",
         "searchsort_dropdown = Dropdown(description= \"Results Sorting\", value= SEEDERSSORT, options = [('By Seeders', SEEDERSSORT), ('By Time', TIMESORT), ('By Size', SIZESORT)], layout= t2controls_layout, style= t2controls_style)\n",
         "searchsort_hbox = HBox((searchsort_dropdown,),layout= t_formrow_layout)\n",
+        "\n",
         "searchorder_dropdown = Dropdown(description= \"Results Order\", value= DESCORDER, options = [('Ascending', ASCORDER), ('Descending', DESCORDER)], layout= t2controls_layout, style= t2controls_style)\n",
         "searchorder_hbox = HBox((searchorder_dropdown,), layout= t_formrow_layout)\n",
+        "\n",
         "searchreplace_label = Label(\"Replace Existing\", layout= checkboxlabellayout)\n",
         "searchreplace_checkbox = Checkbox(value= False, style= checkboxstyle)\n",
+        "\n",
         "searchreplace_hbox = HBox((searchreplace_label, searchreplace_checkbox), layout= t_formrow_layout)\n",
         "searchbackup_label = Label(\"Save Backup\", layout= checkboxlabellayout)\n",
+        "\n",
         "searchbackup_checkbox = Checkbox(value= False, style= checkboxstyle)\n",
         "searchbackup_hbox = HBox((searchbackup_label, searchbackup_checkbox), layout= t_formrow_layout)\n",
         "searchbackup_hbox.layout.display = None\n",
-        "searchreplace_label.add_class(\"label-flex\")\n",
-        "searchbackup_label.add_class(\"label-flex\")\n",
+        "\n",
         "searchsaveas_text = Text(description= \"Custom Name\", value= \"\", layout= t2controls_layout, style= t2controls_style)\n",
         "searchsaveas_hbox = HBox((searchsaveas_text,),layout= t_formrow_layout)\n",
+        "\n",
         "searchsearch_button = Button(description= \"Search\", layout= bigbtn_layout, style= bigbtn_style)\n",
         "searchsearch_button.layout.align_self = \"center\"\n",
+        "searchreplace_label.add_class(\"label-flex\")\n",
+        "searchbackup_label.add_class(\"label-flex\")\n",
         "\n",
         "searchview1_vbox= VBox((searchsearch_hbox, searchtype_hbox, searchsite_hbox, searchcategory_hbox,\n",
         "                                   searchsort_hbox, searchorder_hbox, searchreplace_hbox,\n",
@@ -4993,13 +5048,9 @@
         "    with out:\n",
         "        display(view)\n",
         "\n",
-        "def updatesearchresults(result: WebResult, page): ####\n",
+        "def updatesearchresults(result: WebResult, page, sort= None, order= None): #\n",
         "    switchview(result.tab, getloadingview(f'Search for {types[result.attrs.type_]} {result.search} site: {result.site} page: {page}.'), temp= True)\n",
-        "    if result.site == X1337X:\n",
-        "        update1337xresult(result= result, page= page)\n",
-        "    if result.site == IMDB:\n",
-        "        updateIMDBresult(result, page= page)\n",
-        "\n",
+        "    result.updateresults(page, sort, order)\n",
         "    pagination = getpagination(result)\n",
         "    dataframe = result.getdataframe()\n",
         "    result.table.value = dataframe\n",
@@ -5033,12 +5084,7 @@
         "        children = (result_html,)\n",
         "    else:\n",
         "        searchtitle_html = HTML(gethtmltext(f\"Search results {result.search}\", fontsize= '22px'), layout= {'width': '33%'})\n",
-        "        controls_hbox = HBox(result.getresultcontrols(), layout= {\"width\": \"550px\"})\n",
-        "\n",
-        "        def pagination_handler(btn): \n",
-        "            page = int(btn.description)\n",
-        "            updatesearchresults(result, page= page)\n",
-        "        result.pagination_handler = pagination_handler\n",
+        "        controls_hbox = HBox(result.getresultcontrols(), layout= {\"width\": \"650px\"})\n",
         "        pagination = getpagination(result)\n",
         "        pagination_hbox = HBox(pagination, layout= {'align_items':'center'})\n",
         "        row1 = HBox((searchtitle_html, controls_hbox, pagination_hbox), layout= {\"height\": \"45px\", \"width\": \"100%\", \"align_items\": \"center\", 'padding': '0 0 0 40px'})\n",
